--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://ssidelnikov.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Mein Blog
+subtitle: Der Blog
+author: Stan S
 simple_search: http://google.com/search
 description:
 
@@ -26,8 +26,8 @@ email:
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: 
-permalink: /blog/:year/:month/:day/:title/
+root: /
+permalink: /blog/:year/:month/:title/
 source: source
 destination: public
 plugins: plugins
